--- a/CIFAR10-ResNet.ipynb
+++ b/CIFAR10-ResNet.ipynb
@@ -1,19 +1,6 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "2602088986_Calvin Alexander\n",
-    "\n",
-    "2602094206_Dean Hans Felandio Setiadi Saputra\n",
-    "\n",
-    "2602091040_Marvella Shera Devi\n",
-    "\n",
-    "2602093600_Verren Angelina Saputra"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -94,7 +81,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Block Block of ResNet\n",
+    "#BottleNeck Block of ResNet\n",
     "class Block(nn.Module):\n",
     "    def __init__(self, in_channels,out_channels, stride=1, identity_downsample=None):\n",
     "        '''\n",
@@ -383,7 +370,9 @@
    "source": [
     "Replicating Resnet Paper augmentation on CIFAR10\n",
     "\n",
-    "4 pixels are padded on each side, and a 32×32 crop is randomly sampled from the padded image or its horizontal flip. For testing, we only evaluate the single view of the original 32×32 image."
+    "4 pixels are padded on each side, and a 32×32 crop is randomly sampled from the padded image or its horizontal flip. For testing, we only evaluate the single view of the original 32×32 image.\n",
+    "\n",
+    "Added RandomErasing method too"
    ]
   },
   {
@@ -534,7 +523,7 @@
    ],
    "source": [
     "model.load_state_dict(torch.load('lastest-augmented-small.pth'))\n",
-    "#Kalo mau lanjutin training load ini dulu baru run training loop"
+    "#To continue training after saving the weight"
    ]
   },
   {
@@ -646,7 +635,7 @@
     "    for i, (inputs, labels) in enumerate(train_loader):\n",
     "        inputs, labels = inputs.to(device), labels.to(device)\n",
     "        \n",
-    "        # Zero the parameter gradients\n",
+    "        # Reset the parameters gradient\n",
     "        optimizer.zero_grad()\n",
     "        \n",
     "        # Forward pass\n",
