--- a/CIFAR10-ResNet.ipynb
+++ b/CIFAR10-ResNet.ipynb
@@ -77,6 +77,52 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class BasicBlock(nn.Module): #Still unused\n",
+    "    def __init__(self,in_channels,out_channels, stride=1, identity_downsample=None):\n",
+    "        super(BasicBlock,self).__init__()\n",
+    "        \n",
+    "        self.conv1= nn.Conv2d(in_channels, out_channels, kernel_size=3, stride=stride, padding=1, bias=False)\n",
+    "        self.bn1= nn.BatchNorm2d(out_channels)\n",
+    "        \n",
+    "        self.conv2= nn.Conv2d(out_channels, out_channels, kernel_size=3, stride=1, padding=1, bias=False)\n",
+    "        self.bn2= nn.BatchNorm2d(out_channels)\n",
+    "        \n",
+    "        self.relu= nn.ReLU()\n",
+    "        self.identity_downsample= identity_downsample\n",
+    "        \n",
+    "        self.expansion=1\n",
+    "        \n",
+    "    def forward(self,x):\n",
+    "        identity= x\n",
+    "        \n",
+    "        x= self.conv1(x)\n",
+    "        x= self.bn1(x)\n",
+    "        x= self.relu(x)\n",
+    "        \n",
+    "        x= self.conv2(x)\n",
+    "        x= self.bn2(x)\n",
+    "        \n",
+    "        if self.identity_downsample is not None:\n",
+    "            identity= self.identity_downsample(identity)\n",
+    "            \n",
+    "        x+= identity\n",
+    "        x= self.relu(x)\n",
+    "        \n",
+    "        return x\n",
+    "\n",
+    "        \n",
+    "        \n",
+    "    \n",
+    "    \n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
    "outputs": [],
@@ -205,12 +251,19 @@
     "        self.relu=nn.ReLU()\n",
     "        self.maxpool=nn.MaxPool2d(kernel_size=3, stride=2, padding=1)\n",
     "        \n",
-    "        #Residual Layers\n",
-    "        self.layer1=self._make_layer(block, layers[0], out_channels=64, stride=1)\n",
-    "        self.layer2=self._make_layer(block, layers[1], out_channels=128, stride=2)\n",
-    "        self.layer3=self._make_layer(block, layers[2], out_channels=256, stride=2)\n",
-    "        self.layer4=self._make_layer(block, layers[3], out_channels=512, stride=2)\n",
-    "        \n",
+    "        if block==BasicBlock:\n",
+    "            self.layer1=self._make_layer(block, layers[0], out_channels=64, stride=1)\n",
+    "            self.layer2=self._make_layer(block, layers[1], out_channels=128, stride=2)\n",
+    "            self.layer3=self._make_layer(block, layers[2], out_channels=256, stride=2)\n",
+    "            self.layer4=self._make_layer(block, layers[3], out_channels=512, stride=2)\n",
+    "             \n",
+    "        else:\n",
+    "            #Residual Layers\n",
+    "            self.layer1=self._make_layer(block, layers[0], out_channels=64, stride=1)\n",
+    "            self.layer2=self._make_layer(block, layers[1], out_channels=128, stride=2)\n",
+    "            self.layer3=self._make_layer(block, layers[2], out_channels=256, stride=2)\n",
+    "            self.layer4=self._make_layer(block, layers[3], out_channels=512, stride=2)\n",
+    "            \n",
     "        #Closing Layers (Right Side of Image)\n",
     "        self.avgpool=nn.AdaptiveAvgPool2d((1,1)) #Define the output size and automatically adjust the kernel size\n",
     "        self.fc=nn.Linear(512*self.expand, num_classes) #Fully connected layer (52*4 because the output of the last layer is 512*4)\n",
@@ -317,6 +370,22 @@
     "    Resnet Training with custom architecture\n",
     "    '''\n",
     "    return ResNet(block,architecture , img_channels, num_classes)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def Resnet18(num_classes,img_channels=3):\n",
+    "    '''\n",
+    "    ResNet18 Architecture Default\n",
+    "    3x3 Convolutional Layer with 64 filters, \n",
+    "    followed by 4 residual blocks with 2,2,2,2 Block blocks each.\n",
+    "    1 Fully connected layer with 1000 output classes.\n",
+    "    '''\n",
+    "    return ResNet(BasicBlock, [2,2,2,2], img_channels, num_classes)"
    ]
   },
   {
